# passware_initial_task

./: .gitignore  CMakeLists.txt  README.md
cmake/Modules/: add_functional_test.cmake
cmake/Scripts/: execute_and_compare.cmake
src/: CMakeLists.txt  main.cpp
src/cryptography/: check_password.cpp  check_password.h
src/io/: parse_file.cpp  parse_file.h
src/util/: cartesian_range_power.h  gcry_exception.h  make_shared_array.h  variadic_iter_join.h
test/: CMakeLists.txt
test/functional_test/: CMakeLists.txt  functional_test_description
test/unit_test/: CMakeLists.txt  cartesian_range_power_test.cpp  parse_file_test.cpp  unit_test.cpp
